@@ -3,6 +3,8 @@ Changelog
 
 1.5.dev0 - (unreleased)
 -----------------------
+- Archived state viewlet styling
+  [krisztina]
 
 1.4 - (2020-01-21)
 ------------------
@@ -63,4 +65,3 @@ Changelog
 - Improve styling of country checkout actions
   [tiberich]
 - Initial release
-
